[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/enemy_wave.gd" type="Script" id=1]

[node name="EnemyWave" type="Node2D"]
script = ExtResource( 1 )

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
